[package]
name = "kummer-isogenies-rs"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"

[dependencies]
blake3 = { version = "1.8.2", features = ["digest", "zeroize"] }
cubemoma = "0.0.6"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = { version = "0.2.19", features = ["i128"] }
once_cell = { version = "1.21.3", features = ["atomic-polyfill", "portable-atomic"] }
rand = { version = "0.9.2", features = ["simd_support", "unbiased"] }
